<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/entrycolor"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/entry_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/item_name"
            android:textColor="@color/entrytext"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/entry_gps_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_location_off_black_24dp"
            android:tint="@color/entrytext" />

        <TextView
            android:id="@+id/entry_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/gps_off"
            android:textColor="@color/entrytext"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/arrow_dropper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_weight="8"
            android:src="@drawable/ic_arrow_drop_down_black_24dp"
            android:tint="@color/entrytext" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/hidden_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/entry_image_pager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp">


            </android.support.v4.view.ViewPager>

            <android.support.design.widget.TabLayout
                android:id="@+id/entry_image_indicator"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:tabBackground="@drawable/tab_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp" />

            <TextView
                android:id="@+id/entry_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="@color/entrytext"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/available_directions"
                android:textColor="@color/entrytext"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/directions_walk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_directions_walk_black_24dp"
                    android:tint="@color/entrytext" />

                <ImageView
                    android:id="@+id/directions_pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_train_black_24dp"
                    android:tint="@color/entrytext" />

                <ImageView
                    android:id="@+id/directions_taxi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_local_taxi_black_24dp"
                    android:tint="@color/entrytext" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>